# ops-www

./: .gitignore  Makefile  README.md  README.rst  justfile  pyproject.toml  requirements.txt
source/: conf.py  conf.py.bkp  index.rst
source/posts/: first-post.rst  test_post.rst
source/posts/2025/: 2025-11-27-pipe_size.rst  2025-11-28-pipe.rst  2025-11-29-min_wall.rst  first-ipynb-post.ipynb  first-post.rst  pipe_table.csv
src/: about.rst  conf.py  index.rst
